force-app/main/default/objects/Affected_SKU__c/Affected_SKU__c.object-meta.xml
<CustomObject>
    <label>Affected SKU</label>
    <nameField>
        <label>Affected SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affected SKUs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>