force-app/main/default/objects/Affected_SKU__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>TextArea</type>
</CustomField>