force-app/main/default/objects/Affected_SKU__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Affected SKUs</relationshipLabel>
    <relationshipName>Affected_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>