force-app/main/default/objects/Affected_SKU__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Team</fullName>
            </value>
            <value>
                <fullName>WH Team</fullName>
            </value>
            <value>
                <fullName>Refund Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>