force-app/main/default/objects/Affected_SKU__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <label>MRP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>