force-app/main/default/objects/Affected_SKU__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Affected SKUs</relationshipLabel>
    <relationshipName>Affected_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>