force-app/main/default/objects/Affected_SKU__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>