force-app/main/default/objects/Affected_SKU__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <label>Selling Price</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>